# aoc_2024

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  codspeed.yml
benches/: day1.rs
src/: day1.rs  main.rs
